--- a/hamsa_portfolio.html
+++ b/hamsa_portfolio.html
@@ -808,18 +808,22 @@
                 <p>Don't be afraid to reach out! I'm always interested in discussing new opportunities, collaborating on projects, or just having a conversation about technology and innovation.</p>
                 
                 <div class="contact-info">
-                    <div class="contact-item">
-                        <div>📧</div>
-                        <a href="mailto:hamsa.abdikarim06@gmail.com">hamsa.abdikarim06@gmail.com</a>
+                                    <div class="contact-item">
+                    <div>
+                        <img src="gmaillogo.png" alt="Gmail" style="width: 24px; height: 24px; object-fit: contain;">
                     </div>
+                    <a href="mailto:hamsa.abdikarim06@gmail.com">hamsa.abdikarim06@gmail.com</a>
+                </div>
                     <div class="contact-item">
                         <div>📱</div>
                         <a href="tel:+16126668452">(612) 666-8452</a>
                     </div>
                     <div class="contact-item">
-                        <div>💼</div>
-                        <a href="https://www.linkedin.com/in/hamsa-abdikarim" target="_blank">LinkedIn Profile</a>
-                    </div>
+    <div>
+        <img src="Linkedinlogo.png" alt="LinkedIn" style="width: 24px; height: 24px; object-fit: contain;">
+    </div>
+    <a href="https://www.linkedin.com/in/hamsa-abdikarim" target="_blank">LinkedIn Profile</a>
+</div>
                     <div class="contact-item">
                         <div>📍</div>
                         <span>Minneapolis, MN</span>
